--- a/update.css
+++ b/update.css
@@ -584,3 +584,173 @@ height:100px;
     font-family: Arial;
     margin-left: 450px;
     }
+    .ffb {
+      color:darkblue;
+      font-size: 24px;
+      text-decoration: none;
+      margin-left: 30px;
+      font-family: Arial;
+      }
+      .ffb:hover {
+      color:blue;
+      text-decoration: none;
+      font-family: Arial;
+      transition: 0.19s;
+      transition: 0.23s;
+      }
+      .nocopyright {
+      font-family: Arial;
+      font-size: 15px;
+      color:white;
+      margin-top: 100px;
+      }
+      .ffb:active {
+      color:black;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .sqg {
+      color:yellow;
+      text-decoration: none;
+      font-family: Arial;
+      font-weight: bolder;
+      margin-right: 30px;
+      }
+      .sq {
+      color:orange;
+      text-decoration: none;
+      font-size: 20px;
+      font-family: Arial;
+      }
+      .sqg:hover {
+      color:orange;
+      text-decoration: none;
+      font-family: Arial;
+      transition: 0.19s;
+      transition: 0.23s;
+      }
+      .sqg:active {
+      color:black;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .bible {
+      font-family: Arial;
+      margin-left: 150px;
+      color:salmon;
+      text-decoration: none;
+      margin-right: 20px;
+      font-weight: bolder;
+      }
+      .bible1 {
+      font-family: Arial;
+      color:salmon;
+      text-decoration: none;
+      font-weight: bolder;
+      }
+      .bible:hover {
+      color:blue;
+      text-decoration: none;
+      font-family: Arial;
+      transition: 0.19s;
+      transition: 0.23s;
+      }
+      .bible:active {
+      color:black;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .we {
+      color:lightblue;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .we:hover {
+      color:red;
+      text-decoration: none;
+      font-family: Arial;
+      transition: 0.19s;
+      transition: 0.23s;
+      }
+      .we:active {
+      color:black;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .contact {
+        color:darkblue;
+        text-decoration: none;
+        margin-left: 30px;
+        margin-right: 20px;
+        font-family: Arial;
+      }
+      .contact:hover {
+      color:blue;
+      text-decoration: none;
+      font-family: Arial;
+      transition: 0.19s;
+      transition: 0.23s;
+      }
+      .contact:active {
+      color:black;
+      text-decoration: none;
+      font-family: Arial;
+      }
+      .wel3 {
+      color:Red;
+      }
+      .wel2 {
+      color:yellow;
+      border-color: blue;
+      font-family: Arial;
+      }
+      .wel {
+      margin-top: 60px;
+      color:Blue;
+      margin-left: 50px;
+      font-family: Arial;
+      }
+      .let {
+      color:blue;
+      margin-top:0;
+      margin-left: 30px;
+      font-family: Arial;
+      }
+      .start {
+      background-color: green;
+      border-color: red;
+      color:white;
+      height:70px;
+      font-size: 20px;
+      width:150px;
+      border-radius: 100px;
+      margin-left:80px;
+      font-family: Arial;
+      cursor: pointer;
+      display: inline-block;
+      }
+      .start-hover {
+      background-color:Yellow;
+      color:black;
+      }
+      .start-active {
+      background-color: black;
+      color:white;
+      }
+      .bless {
+      color:green;
+      margin-left:20px;
+      font-size:19px;
+      margin-left: 85px;
+      font-family: Arial;
+      }
+      .copyright {
+      color:white;
+      margin-top: 60px;
+      font-family: Gabarito;
+      }
+      .copyright2 {
+      color:white;
+      font-family: Arial;
+      }
+      
